# qdrant-example

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  qdrant_cli.html  qdrant_example.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  qdrant_cli.doctree  qdrant_example.doctree
docs/_sources/: index.rst.txt  modules.rst.txt  qdrant_cli.rst.txt  qdrant_example.rst.txt
docs_src/: conf.py  qdrant_example.rst
examples/: docs.jsonl  filter.json
qdrant_example/: __main__.py
