[tool.poetry]
name = "qdrant-example"
version = "0.1.0"
description = ""
authors = ["Minoru OSUKA <minoru.osuka@stanby.inc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
argparse = "^1.4.0"
sentence-transformers = "^2.2.2"
numpy = "^1.26.1"
pandas = "^2.1.1"
tqdm = "^4.66.1"
qdrant-client = {extras = ["fastembed"], version = "^1.6.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
isort = "^5.12.0"
black = "^23.9.1"
pytest-cov = "^4.1.0"
autopep8 = "^2.0.4"
flake8 = "^6.1.0"
pytest-benchmark = "^4.0.0"
restructuredtext-lint = "^1.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.3.0"
sphinx = "^7.2.6"
sphinxcontrib-seqdiag = "^3.0.0"

[tool.black]
line-length = 79

[tool.flake8]
extend-ignore = "E203,E501"
max-line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qdrant-example = "qdrant_example.__main__:main"
